# sol-payments

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
altfrontend/: package-lock.json  package.json  provider.tsx
altfrontend/app/: layout.tsx  page.tsx
altfrontend/app/components/: CreateStreamForm.tsx  ReclaimStreamForm.tsx  RedeemStreamForm.tsx  StreamInfo.tsx  WalletConnectButton.tsx
altfrontend/utils/: solana.ts  solana_streaming_payments.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Features.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  WalletProvider.tsx
frontend/src/hooks/: useProgram.ts  useStreams.ts
frontend/src/idl/: solana_streaming_payments.ts
frontend/src/services/: streamService.ts
frontend/src/types/: program.ts
frontend/src/utils/: streamUtils.ts
programs/solana-streaming-payments/: Cargo.toml
programs/solana-streaming-payments/src/: lib.rs
tests/: solana-streaming-payments.ts
