[package]
name = "solana-streaming-payments"
version = "0.1.0"
description = "Solana Streaming Payments Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_streaming_payments"

[dependencies] 
anchor-lang = {version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] } 


[features]
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

